# tensorflow_serving_example

./: CMakeLists.txt  README.md  README2.md
include/: util.h
src/: CMakeLists.txt  Makefile  deep_model.cc
src/linear/: freeze_graph.py  simple_model.cc  simple_model.py
src/python/: serving.py
src/serving_project/: tf_model.cpp
